Fix dropdown on IE

--- a/src/components/dropdown/styles.css
+++ b/src/components/dropdown/styles.css
@@ -5,7 +5,7 @@ dropdown { display: inline-block; vertical-align: bottom }
 .dropdown label{ margin:0; cursor: pointer; padding: .552em 1.5em .552em 0; display: flex; width: auto }
 .dropdown .list { position: relative }
 .dropdown .list .inner{ display:none; top:0em; left: 0; padding-top: 2px; position: absolute; z-index: 999 }
-.dropdown .list ul { overflow: hidden; overflow-y: auto; max-height: 320px; background-color: #fff; box-shadow: 0 4px 10px -1px rgba(0,0,0,0.1) }
+.dropdown .list ul { margin:0; overflow: hidden; overflow-y: auto; max-height: 320px; background-color: #fff; box-shadow: 0 4px 10px -1px rgba(0,0,0,0.1) }
 .dropdown .list ul li { padding: .572em .75em; cursor: pointer; /* border: 1px solid #fff; border-bottom-color: #eee; */ border-bottom: 1px solid #eee; min-width: 5em; color:#666; white-space: nowrap; text-align: left }
 .dropdown .list ul li:last-child { border-bottom: none }
 .dropdown .list ul li:hover,
